# train-data-platform-excercise

./: .gitignore  README.md  docker-compose.init.yml  docker-compose.yml  pyproject.toml
bi/: Dockerfile  bootstrap-init.sh  bootstrap.sh  init.Dockerfile
bi/workspace/pages/: index.md  stations.md
bi/workspace/sources/warehouse/: station_usage.sql
dbt_warehouse/: .user.yml  dbt_project.yml  profiles.yml
dbt_warehouse/models/bronze/csvtest/: csvtest_customers.sql  csvtest_orders.sql  schema.yml
dbt_warehouse/models/bronze/trains/: rautatieliikenne_api.sql  schema.yml  station_names.sql
dbt_warehouse/models/gold/: schema.yml  station_usage.sql
dbt_warehouse/models/silver/: schema.yml  station_stops.sql  trains_timetable.sql
scripts/: update_data.sh
src/ingestor/: get_train_data.py
