[project]
name = "data-alusta"
version = "0.1.0"
description = "data-alusta jipii"
readme = "README.md"
authors = [
    { name = "Mandi Markkanen", email = "mandimarkkanen@kamk.fi" }
]
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.9.4",
    "ipykernel>=6.30.1",
    "requests>=2.32.4",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
